# slam-dataset-pipeline

./: .gitignore  README.md  devlog.md  jan_10_figure.md  main.py  pyproject.toml
configs/: pipeline_schema.yaml
configs/experiments/: eth3d_orbslam2.yaml  euroc_orbslam2.yaml  kitti_orbslam2.yaml  tartanair_orbslam2.yaml
docker/orbslam2/: Dockerfile  run_slam.sh
lists/: eth3d.txt  euroc.txt  kitti.txt  tartanair.txt
logs/: run_kitti.sh_54416285_0.out  run_kitti.sh_54416285_1.out  run_kitti.sh_54416285_2.out  run_kitti.sh_54416285_3.out  run_kitti.sh_54416285_4.out  run_kitti.sh_54416285_5.out  run_kitti.sh_54416285_6.out  run_kitti.sh_54416285_7.out  run_kitti.sh_54416285_8.out  run_kitti.sh_54416285_9.out
scripts/: aggregate.py  preprocess_orb.py  run_sequence_cli.py
scripts/slurm/: create_pca.sh  preprocess_eth3d_orb.sh  preprocess_euroc_orb.sh  preprocess_kitti_orb.sh  preprocess_tartanair_orb.sh  run_array.sh  run_eth3d.sh  run_euroc.sh  run_kitti.sh  run_tartanair.sh
slam_pipeline/: config.py
slam_pipeline/association/: one_to_one.py  timestamp_nearest.py
slam_pipeline/datasets/: Dataset.py  Eth3dDataset.py  EurocDataset.py  KittiDataset.py  Sequence.py  TartanAirDataset.py  factory.py
slam_pipeline/metrics/: rpe.py
slam_pipeline/pipeline/: Pipeline.py
slam_pipeline/runtime/: ContainerRuntime.py  DockerRuntime.py  SingularityRuntime.py
slam_pipeline/slam_systems/: ORBSLAMSystem.py  SLAMSystem.py  common.py  factory.py
slam_pipeline/trajectories/: alignment.py  association.py  matching.py  tracking_states.py  trajectory.py
(+5 files in other folders)
