[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slam-dataset-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["slam_dataset_pipeline"]
