[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slam-dataset-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
]

[tool.hatch.build.targets.wheel]
packages = ["slam_pipeline"]
